# haskell-trayicon-gtk

./: .gitignore  CHANGELOG.md  Main.hs  build.nix  default.nix  flake.nix  gui-app.cabal  haskellnix.nix  haskellnixpkgs.nix  release.nix  stack.yaml
nix/: sources.json
