cabal-version:       >=1.10
name:                gui-app
version:             0.1.0.0
license-file:        LICENSE
author:              Jacek Galowicz
maintainer:          jacek@galowicz.de
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable gui-app
  main-is:             Main.hs
  build-depends:       base
                     , gtk3
  default-language:    Haskell2010
